Fixing the Bugs!
During staging, fixed all of the internet explorer bugs that I had
discovered, fixed the appearance in the mobile view for better user
understanding, contact form is functioning, added Google analytics to
each page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" type="text/css" href="css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="css/fonts/stylesheet.css"/>
 
+<!--[if IE]>
+  <link rel="stylesheet" type="text/css" href="css/all-ie-only.css" />
+<![endif]-->
+
     <link rel="shortcut icon" type="image/png" href="img/logo-tab.png">
 
     <script src="js/vendor/modernizr.js"></script>
@@ -54,12 +58,10 @@
       </div>
     </div> 
 
-
-
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info afan">
         <a href="projects/afan.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Alliance for the Future of Agriculture in Nebraska</h3>
             <hr>
             <h4>Photography, Print</h4>
@@ -67,12 +69,20 @@
         </a>
         <img data-interchange="[img/afan-home.jpg, (default)], [img/afan-home-large.jpg, (xlarge)]" alt="alliance for the future of agriculture; print layout, photography, infographics">
       </div>
-    </div>  
+    </div>
+
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/afan.html">
+            <h3>Alliance for the Future of Agriculture in Nebraska</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
 
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info pups-paws">
         <a href="projects/pups-paws.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Pup's Paws</h3>
             <hr>
             <h4>Package</h4>
@@ -82,10 +92,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/pups-paws.html">
+            <h3>Pup's Paws</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info monster">
         <a href="projects/monster.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Mommy's Little Monster</h3>
             <hr>
             <h4>Print</h4>
@@ -95,10 +112,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/monster.html">
+            <h3>Mommy's Little Monster</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info heartland">
         <a href="projects/heartland.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Heartland Autobody</h3>
             <hr>
             <h4>Web</h4>
@@ -108,10 +132,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/heartland.html">
+            <h3>Heartland Autobody</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info starbucks">
         <a href="projects/starbucks.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Starbucks</h3>
             <hr>
             <h4>Photography, Print</h4>
@@ -121,10 +152,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/starbucks.html">
+            <h3>Starbucks</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info hyvee">
         <a href="projects/hyvee.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Hy-Vee Floral</h3>
             <hr>
             <h4>Photography, Web, Print</h4>
@@ -134,10 +172,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/hyvee.html">
+            <h3>Hy-Vee</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info maroon5">
         <a href="projects/maroon5.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Maroon 5</h3>
             <hr>
             <h4>Print</h4>
@@ -147,10 +192,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/maroon5.html">
+            <h3>Maroon 5</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info nra">
         <a href="projects/nra.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>National Rifle Association</h3>
             <hr>
             <h4>Promotional, Print</h4>
@@ -160,10 +212,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/nra.html">
+            <h3>National Rifle Association</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info shotgun-weddings">
         <a href="projects/shotgun-weddings.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Shotgun Weddings</h3>
             <hr>
             <h4>Print</h4>
@@ -173,10 +232,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/shotgun-weddings.html">
+            <h3>Shotgun Weddings</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info bebs-jam">
         <a href="projects/bebs-jam.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Beb's Jam</h3>
             <hr>
             <h4>Package</h4>
@@ -186,10 +252,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/bebs-jam.html">
+            <h3>Beb's Jam</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info greasy-garage">
         <a href="projects/greasy-garage.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Greasy Garage</h3>
             <hr>
             <h4>Print</h4>
@@ -199,10 +272,17 @@
       </div>
     </div>
 
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/greasy-garage.html">
+            <h3>Greasy Garage</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
+    </div>
+
     <div class="large-6 medium-6 column clear-padding">
       <div class="project-info pinnacle">
         <a href="projects/pinnacle.html">
-          <section class="project-info-center">
+          <section class="hide-for-small-only project-info-center">
             <h3>Pinnacle Bank Arena</h3>
             <hr>
             <h4>Mobile</h4>
@@ -210,6 +290,13 @@
         </a>
         <img data-interchange="[img/pinnacle-home.jpg, (default)], [img/pinnacle-home-large.jpg, (xlarge)]" alt="pinnacle bank area mobile design; ticket application">
       </div>
+    </div>
+
+    <div class="small-12 columns show-for-small-only clear-padding">
+        <a href="projects/pinnacle.html">
+            <h3>Pinnacle Bank Arena</h3>
+            <img src="img/button-more.png" alt="view more">
+          </a>
     </div>
     
 
@@ -293,6 +380,7 @@
 
 <script src="js/foundation.min.js"></script>
 
+
 <script>
   $(document).foundation();
 </script>
@@ -330,6 +418,9 @@
       });
     });
 </script>
+
+
+<script src="js/analytics.js"></script>
 
 
 
