Fixing Safari and Favicon
Fixed the viewing in Safari and fixed the favicon issues. Confirmed
that new mobile view is better.

--- a/projects/heartland.html
+++ b/projects/heartland.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
 
-    <link rel="shortcut icon" type="image/png" href="../img/logo-tab.png">
+    <!--[if IE]>
+      <link rel="stylesheet" type="text/css" href="../css/all-ie-only.css" />
+    <![endif]-->
+
+    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
     
     <script src="../js/vendor/modernizr.js"></script>
   </head>
