--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="css/all-ie-only.css" />
 <![endif]-->
 
-    <link rel="shortcut icon" type="image/png" href="img/logo-tab.png">
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.png">
 
     <script src="js/vendor/modernizr.js"></script>
   </head>
