--- a/projects/shotgun-weddings.html
+++ b/projects/shotgun-weddings.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="../css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="../css/custom.css"/>
     <link rel="stylesheet" type="text/css" href="../css/fonts/stylesheet.css"/>
-
-    <link rel="shortcut icon" type="image/png" href="../img/logo-tab.png">
     
     <script src="../js/vendor/modernizr.js"></script>
+
+    <!--[if IE]>
+      <link rel="stylesheet" type="text/css" href="../css/all-ie-only.css" />
+    <![endif]-->
+
+    <link rel="shortcut icon" type="image/x-icon" href="../img/favicon.png">
+
   </head>
   <body>
 
