Fixed Thank You, A-FAN
Fixed the thank you page to include an additional link back to the home
page, also included the AIGA award on the A-FAN page.

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
   <div class="row">
       <div class="large-3 medium-3 large-offset-1 medium-offset-1 column">
-        <p>I would love to answer any questions you might have or just chat about design. Drop me a line and I will be sure to contact you! If you'd rather e-mail, please contact me at info@dakotahnicole.com.</p>
+        <p>I would love to answer any questions you might have or just chat about design. Drop me a line and I will be sure to contact you! If you'd rather e-mail, please contact me at <a href="mailto:info@dakotahnicole.com?subject=Got-a-new-site-lover!">info@dakotahnicole.com</a>.</p>
       </div>
 
         <form method="post" action="contact-engine.php">
