--- a/projects/afan.html
+++ b/projects/afan.html
@@ -54,6 +54,8 @@
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 small-12 columns end">
         <h6>Promotional Booklet: </h6> <p id="inline-text">Photography, Print</p>
         <p>A-FAN is a non-profit organization in Nebraska that helps boost Nebraskan’s knowledge about popular farming topics. The company was looking for a booklet that specifically showed the benefits of farming livestock to males ranging between ages 18 and 28 in order to boost interest in Nebraska agriculture.</p>
+        <br>
+        <p id="inline-text"><img src="../img/aiga-logo.png">AIGA Nebraska 2014, Silver</p>
       </div>
       </div>
 
