--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio website of Graphic Designer, Dakotah Nicole Buchli (Editionh). Specialize in typography, photography, and print layout—expanding knowledge as a web designer and developer.">
-    <meta name="keywords" content="Typography,Photography,Print Layout,Graphic Design,Minimal,HTML,CSS,">
+    <meta name="keywords" content="Typography,Photography,Print Layout,Print,Passion,Graphic Design,Minimal,HTML,CSS,New,Design,Graphic,Graphics">
     <meta name="author" content="Dakotah Buchli">
     <title>editionh</title>
     <link rel="stylesheet" href="css/foundation.css" />
