--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio website of Graphic Designer, Dakotah Nicole Buchli (Editionh). Specialize in typography, photography, and print layout—expanding knowledge as a web designer and developer.">
+    <meta name="description" content="Portfolio website of Graphic Designer, Dakotah Nicole Hicks Buchli (Editionh). Specialize in typography, photography, and print layout—expanding knowledge as a web designer and developer.">
     <meta name="keywords" content="Typography,Photography,Print Layout,Print,Passion,Graphic Design,Minimal,HTML,CSS,New,Design,Graphic,Graphics">
-    <meta name="author" content="Dakotah Buchli">
+    <meta name="author" content="Dakotah Hicks (Buchli)">
     <title>editionh</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css"/>
@@ -309,7 +309,7 @@
 
     <div class="row">
       <div class="large-7 medium-7 large-offset-4 medium-offset-4 columns end">
-        <p>Hello! My name is Dakotah Buchli, but my designer name is edition<b>h</b>. I am a small-town girl, born and raised just west of Lincoln, Nebraska. I have a passion for all things creative and thrive off of the opportunity to explore new things within the design world. I am a quick learner with the drive and determination to complete any task I put my mind to. I am most interested in the areas of print, typography, and photography, but am also finding a new love in web design.</p>
+        <p>Hello! My name is Dakotah Hicks (Buchli), but my designer name is edition<b>h</b>. I am a small-town girl, born and raised just west of Lincoln, Nebraska. I have a passion for all things creative and thrive off of the opportunity to explore new things within the design world. I am a quick learner with the drive and determination to complete any task I put my mind to. I am most interested in the areas of print, typography, and photography, but am also finding a new love in web design.</p>
       </div>
     </div> 
 
